# sitemap-gazer

./: .gitignore  CLAUDE.md  README.md  README.zh.md  cleanup_data.py  pyproject.toml  requirements-dev.txt  requirements.txt  sitemap-gazer.json  start.sh
.claude/: settings.local.json
data/altema.jp/20250719_214643/: sitemap.json
data/altema.jp/20250720_095926/: diff.json  sitemap.json
data/altema.jp/20250721_113646/: diff.json  sitemap.json
data/crazygame.com/20250722_085822/: sitemap.json
data/crazygame.com/20250723_090156/: diff.json  sitemap.json
data/crazygame.com/20250724_090843/: diff.json  sitemap.json
data/crazygame.com/20250725_090333/: diff.json  sitemap.json
data/friv.com/20250722_085822/: sitemap.json
data/game8.co/20250719_214643/: sitemap.json
data/game8.co/20250724_090843/: diff.json  sitemap.json
data/game8.jp/20250719_214643/: sitemap.json
data/game8.jp/20250720_095926/: diff.json  sitemap.json
data/game8.jp/20250721_113646/: diff.json  sitemap.json
data/gamewith.jp/20250719_214643/: sitemap.json
data/gamewith.jp/20250721_113646/: diff.json  sitemap.json
data/playhop.com/20250719_214643/: sitemap.json
data/playhop.com/20250721_113646/: diff.json  sitemap.json
data/playhop.com/20250723_090156/: diff.json  sitemap.json
data/playhop.com/20250724_090843/: diff.json  sitemap.json
data/playhop.com/20250725_090333/: diff.json  sitemap.json
data/poki.com/20250722_085822/: sitemap.json
data/poki.com/20250723_090156/: diff.json  sitemap.json
data/poki.com/20250724_090843/: diff.json  sitemap.json
(+11 files in other folders)
