[project]
name = "sitemap-gazer"
version = "0.0.2"
description = "A CLI to fetch, diff and monitor sitemaps."
authors = [{name = "HackerQED", email = "HackerQED@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.0",
    "click>=8.1.7",
    "ultimate-sitemap-parser>=0.5",
]

[project.optional-dependencies]
dev = [
    "black>=24.10.0",
]

[project.scripts]
sitemap-gazer = "sitemap_gazer.__main__:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
